# price-tracker

./: .env_example  .gitignore  CLEANUP_SUMMARY.md  PLAN.md  README.md  RESTRUCTURE_PLAN.md  RESTRUCTURE_SUMMARY.md  main.py  portfolio_analyzer.py  portfolio_app.py  pyproject.toml  run_portfolio_viewer.py  web.py
alembic/: env.py
csv/: My Shares Values.csv  My Wacc Rate.csv  My Wacc Report.csv
database/: __init__.py  models.py  schemas.py  session.py
docs/: MIGRATION_GUIDE.md  PROJECT_STRUCTURE.md
nepse/: __init__.py  fetch.py  meroshare.py  npstocks.py  script.py
notebooks/: add_user.ipynb  extract_wacc.ipynb  fetch_price.ipynb  live_prices.ipynb  portfolio_viewer.ipynb  script_generator.ipynb  send_message.ipynb  webhook.ipynb
scripts/: extract_wacc.py  portfolio_pipeline.py  trade_book.py
server/: main.py  portfolio_routes.py
services/: __init__.py  telegram_bot.py  whatsapp.py
src/api/: main.py
src/api/routes/: floorsheet.py  portfolio.py
src/app/: container.py  factories.py
src/config/: settings.py
src/core/nepse/: __init__.py  client.py  fetch.py  floorsheet.py  meroshare.py  npstocks.py  script.py  tms.py
src/core/portfolio/: analyzer.py
src/database/: __init__.py  init_db.py  models.py  schemas.py  session.py
src/infrastructure/db/: __init__.py  models.py  repositories.py  session.py
src/services/: telegram_bot.py  whatsapp.py
src/shared/: __init__.py  config.py  exceptions.py  logging.py  security.py  time.py
src/utils/: utils.py
src/web/: app.py
templates/: holdings.html  interest.html  lots.html  sold_interest.html  transactions.html
tests/test_alerts/: test_service.py
tests/test_api/: test_portfolio_routes.py
tests/test_app/: test_factories.py
tests/test_market_data/: test_service.py
tests/test_portfolio/: test_service.py
utils/: __init__.py  utils.py
(+19 files in other folders)
